--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Lobster|Satisfy" rel="stylesheet">
   <meta charset="utf-8">
   <title>NgElement</title>
   <base href="/">
@@ -8,7 +12,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+  <app-subscriber title="Newsletter!"></app-subscriber>
+  <script>
+    const subscriber = document.querySelector('app-subscriber');
+    subscriber.addEventListener('subscribe', (event) => {
+      console.log(`${event.detail}`);
+    });
+  </script>
 </body>
+
 </html>
